--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
 
   "name": ".no Plus Block",
   "description": "Blokkér VG+, DB+ og annet tull og vås fra norske avisforsider",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "icons":
   {
     "32": "img/1406848496_icon-ios7-trash-outline.png"
@@ -37,7 +37,7 @@
         "*://*.nrk.no/",
         "*://*.tv2.no/"
       ],
-      "js": [ "site_rules.js", "content_script.js" ],
+      "js": [ "common.js", "content_script.js" ],
       "run_at": "document_idle",
       "all_frames": false
     }
